# Yaru-Colors

./: README.md  install.sh  install_OLD.sh  meson.build  meson_options.txt  uninstall.sh
debian/: changelog  rules  yaru-theme-icon.install
gnome-shell/: meson.build
gtk/: meson.build
gtk/src/Aqua-dark/gtk-3.0/: _colors-public.scss  _colors.scss  _drawing.scss  _tweaks.scss  libhandy
gtk/src/Aqua-dark/gtk-3.20/: _palette.scss  assets
gtk/src/Aqua-dark/gtk-4.0/: _defaults.scss
gtk/src/Aqua/gtk-3.0/: _palette.scss  _tweaks.scss  gtk-dark.scss
gtk/src/Aqua/gtk-3.20/: _palette.scss  libhandy
gtk/src/Aqua/gtk-4.0/: _colors-yaru.scss  _defaults.scss  _tweaks.scss
gtk/src/Blue-dark/gtk-3.0/: _palette.scss  assets  libhandy
gtk/src/Blue-dark/gtk-3.20/: _colors-public.scss  gtk-dark.scss
gtk/src/Blue-dark/gtk-4.0/: _defaults.scss
gtk/src/Blue/gtk-3.0/: _palette.scss  apps  gtk-dark.scss  gtk.scss
gtk/src/Blue/gtk-4.0/: _defaults.scss
gtk/src/Green-dark/gtk-2.0/: gtkrc
gtk/src/Green-dark/gtk-3.0/: _common.scss  _palette.scss  assets
gtk/src/Green-dark/gtk-3.20/: _colors.scss  _palette.scss
gtk/src/Green-dark/gtk-4.0/: _defaults.scss  _tweaks.scss
gtk/src/Green/gtk-3.0/: _apps.scss  _palette.scss
gtk/src/Green/gtk-3.20/: _palette.scss
gtk/src/Green/gtk-4.0/: _defaults.scss
gtk/src/Lavender-dark/gtk-3.0/: _apps.scss  _colors.scss  _palette.scss  assets
gtk/src/Lavender-dark/gtk-3.20/: _palette.scss
gtk/src/Lavender-dark/gtk-4.0/: _defaults.scss  _tweaks.scss
gtk/src/Lavender/gtk-3.0/: _palette.scss  gtk-dark.scss
gtk/src/Lavender/gtk-3.20/: _palette.scss
gtk/src/Lavender/gtk-4.0/: _defaults.scss
gtk/src/Pink-dark/gtk-2.0/: gtkrc
gtk/src/Pink-dark/gtk-3.0/: _colors-public.scss  _palette.scss  assets
gtk/src/Pink-dark/gtk-3.20/: _drawing.scss  _palette.scss  _tweaks.scss  apps
gtk/src/Pink-dark/gtk-4.0/: _colors-yaru.scss  _defaults.scss  _tweaks.scss
gtk/src/Pink/gtk-3.0/: _common.scss  _palette.scss
gtk/src/Pink/gtk-3.20/: _palette.scss
gtk/src/Pink/gtk-4.0/: _defaults.scss  _tweaks.scss
gtk/src/Red-dark/gtk-3.0/: _drawing.scss  _palette.scss  _tweaks.scss  apps  assets  gtk-dark.scss
gtk/src/Red-dark/gtk-3.20/: _palette.scss
gtk/src/Red-dark/gtk-4.0/: _defaults.scss  _tweaks.scss  gtk.scss
gtk/src/Red/gtk-3.0/: _palette.scss
gtk/src/Red/gtk-3.20/: _palette.scss  render-assets.sh
gtk/src/Red/gtk-4.0/: _defaults.scss
gtk/src/Yellow-dark/gtk-3.0/: _palette.scss  assets
gtk/src/Yellow-dark/gtk-3.20/: _apps.scss  _common.scss  _palette.scss  libhandy
gtk/src/Yellow-dark/gtk-4.0/: _defaults.scss  _tweaks.scss
gtk/src/Yellow/gtk-3.0/: _palette.scss
gtk/src/Yellow/gtk-3.20/: _palette.scss  apps
gtk/src/Yellow/gtk-4.0/: _defaults.scss
icons/: meson.build
snap/: snapcraft.yaml
src/: .~lock.new color schemes.ods#  README.md  colors.txt  compile_all.sh  compile_parts.sh  dock-indicators.sh  index_dark.theme  index_light.theme  manual-readme.md  manual-themes.sh  (+4 more)
(+812 files in other folders)
