option('icons', type: 'boolean', value: true, description:'build icons component')
option('gnome-shell', type: 'boolean', value: true, description:'build gnome-shell component')
option('gnome-shell-gresource', type: 'boolean', value: false, description: 'build gnome-shell component in gresources')
option('gtk', type: 'boolean', value: true, description:'build gtk component')
option('gtksourceview', type: 'boolean', value: true, description:'build gtksourceview component')
option('metacity', type: 'boolean', value: true, description:'build metacity component')
option('sounds', type: 'boolean', value: true, description:'build sounds component')
option('sessions', type: 'boolean', value: true, description:'build sessions component')
option('communitheme_compat', type: 'boolean', value: false, description:'build communitheme-compact')

option('default', type: 'boolean', value: true, description:'build Yaru gtk default flavour')
option('dark', type: 'boolean', value: true, description:'build Yaru gtk dark flavour')
option('ubuntu-unity', type: 'boolean', value: false, description:'build Yaru with Unity assets')
option('xfwm4', type: 'boolean', value: false, description:'build Yaru with xfwm4 assets')
option('Aqua', type: 'boolean', value: false, description:'build Yaru Aqua flavour')
option('Aqua-dark', type: 'boolean', value: false, description:'build Yaru Aqua-dark flavour')
option('Blue', type: 'boolean', value: false, description:'build Yaru Blue flavour')
option('Blue-dark', type: 'boolean', value: false, description:'build Yaru Blue-dark flavour')
option('Green', type: 'boolean', value: false, description:'build Yaru Green flavour')
option('Green-dark', type: 'boolean', value: false, description:'build Yaru Green-dark flavour')
option('Lavender', type: 'boolean', value: false, description:'build Yaru Lavender flavour')
option('Lavender-dark', type: 'boolean', value: false, description:'build Yaru Lavender-dark flavour')
option('Pink', type: 'boolean', value: false, description:'build Yaru Pink flavour')
option('Pink-dark', type: 'boolean', value: false, description:'build Yaru Pink-dark flavour')
option('Red', type: 'boolean', value: false, description:'build Yaru Red flavour')
option('Red-dark', type: 'boolean', value: false, description:'build Yaru Red-dark flavour')
option('Yellow', type: 'boolean', value: false, description:'build Yaru Yellow flavour')
option('Yellow-dark', type: 'boolean', value: false, description:'build Yaru Yellow-dark flavour')
